--- a/src/app/minion-details/minion-details.component.html
+++ b/src/app/minion-details/minion-details.component.html
@@ -9,6 +9,7 @@
                         <h5 class="card-title">{{minion.name}}</h5>
                         <p class="card-text">{{minion.bio}}</p>
                         <a (click)="return()" class="btn btn-primary">Return</a>
+                        <button class="btn btn-primary" (click)="edit(minion.id)">Edit</button>
                     </div>
                 </div>
             </div>
