--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar (onSearch)="search($event)"></app-navbar>
+<app-navbar></app-navbar>
 <div class="container">
 
  <router-outlet></router-outlet>
