--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/minions" routerLinkActive="active">Minions</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/add" routerLinkActive="active">Add</a>
+        </li>
       </ul>
       <form class="d-flex" (ngSubmit)="search()">
         <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchTerm" (keyup)="search()">
